# Reconbot3Ddemo

./: .gitignore  .gitlab-ci.yml  .project  .travis.yml  IK_p_ABC_q1q2.m  InsertRowTransiConfig_Test.mat  MotionPlanningOptimalSoultion.m  RCB_input_ModeSelection.m  README.md  ReConBot.files  clr_trail_CollisionPoints_button_press.m  pathCuboid.mat  reconbot.files  reconbot.includes
01_ROS_Code/docs/: main.md
01_ROS_Code/docs_source/: main.md
01_ROS_Code/doxygen_input/: Doxyfile
01_ROS_Code/reconbot/: package.xml
01_ROS_Code/reconbot_control/: CMakeLists.txt  package.xml  setup.py
01_ROS_Code/reconbot_control/config/: 2RA2C2_trajectory_controller.yaml  2T2R5_joints_controller.yaml  2T2R5_trajectory_controller.yaml  3T1R_trajectory_controller.yaml  3T2R_trajectory_controller.yaml  RA2C2_joints_controller.yaml  RA2C2_trajectory_controller.yaml  RCB_2RA1C1_controller.yaml  RCB_2RA1C1_joints_controller.yaml  RCB_2RA2C2_controller.yaml  RCB_2RA2C2_joints_controller.yaml  RCB_2T2R5B_controller.yaml  RCB_3T1R_controller.yaml  RCB_3T1R_joints_controller.yaml  RCB_3T2R_controller.yaml  RCB_3T2R_joints_controller.yaml  RCB_full_mode_controller.yaml  RCB_full_mode_joints_controller.yaml  T1R_trajectory_controller.yaml  T2R5_trajectory_controller.yaml  T2R_trajectory_controller.yaml  T3R_joints_controller.yaml  T3R_trajectory_controller.yaml  base_controller.yaml  base_trajectory_controller.yaml  controller_list.yaml  joints_trajectory_controller.yaml  l_arm_joints_controller.yaml  l_arm_joints_trajectory_controller.yaml  r_arm_joints_controller.yaml  r_arm_joints_trajectory_controller.yaml  reconbot_joints_controller.yaml
01_ROS_Code/reconbot_control/include/reconbot_control/: reconbot_control.h
01_ROS_Code/reconbot_control/launch/: RA2C2_reconbot_controller.launch  T1R_reconbot_controller.launch  T2R5_reconbot_controller.launch  T2R_reconbot_controller.launch  T3R_reconbot_controller.launch  base_reconbot_controller.launch  controller_manager.launch  data_capture.launch  l_arm_reconbot_controller.launch  main.launch  r_arm_reconbot_controller.launch  reconbot_controller.launch
01_ROS_Code/reconbot_control/src/: 2RA2C2_move_group_interface.cpp  2RA2C2_trajectory_publisher.cpp  2T2R5_move_group_interface.cpp  2T2R5_trajectory_publisher.cpp  3T1R_move_group_interface.cpp  3T1R_trajectory_publisher.cpp  3T2R_move_group_interface.cpp  3T2R_trajectory_publisher.cpp  CMakeLists.txt  RA2C2_move_group_interface.cpp  RA2C2_trajectory_publisher.cpp  ReConBot.h  T1R_move_group_interface.cpp  T1R_trajectory_publisher.cpp  T2R5_move_group_interface.cpp  T2R_trajectory_publisher.cpp  T3R_move_group_interface.cpp  basic_arm.cpp  enable_torque_service.py  l_arm_move_group_interface.cpp  l_arm_trajectory_publisher.cpp  move_group_interface.cpp  pid_client.py  pid_server.py  pid_service.py.autosave  r_arm_move_group_interface.cpp  r_arm_trajectory_publisher.cpp  sensor_data_capture.cpp  torque_data_capture.cpp  torque_enable_client.cpp  trajectory_client.py  trajectory_publisher.cpp
01_ROS_Code/reconbot_control/src/reconbot_control/: CMakeLists.txt  RA2C2_move_group_interface.cpp  RA2C2_trajectory_publisher.cpp  T1R_move_group_interface.cpp  T1R_trajectory_publisher.cpp  T2R5_trajectory_publisher.cpp  T2R_move_group_interface.cpp  T2R_trajectory_publisher.cpp  T3R_move_group_interface.cpp  T3R_trajectory_publisher.cpp  l_arm_move_group_interface.cpp  l_arm_trajectory_publisher.cpp  move_group_interface.cpp  pid_server.py  r_arm_move_group_interface.cpp  r_arm_trajectory_publisher.cpp  torque_data_capture.cpp  trajectory_publisher.cpp
01_ROS_Code/reconbot_control/srv/: EnableTorque.srv  ModeState.srv  PIDValues.srv
01_ROS_Code/trajectory/: 2R_A1C1_A2C2_trajectory.txt  2R_A2C2_trajectory.txt  2R_Fixed_Home.txt  2T2R.txt  2T2R_X0Y0  2_2-Fixed2Home.txt  2_3-3T1R_Redundant.txt  3T1R.txt  5Modes_Redundant.txt  6Modes_Redundant.txt  7Modes_Redundant.txt  Home2FixedFold.txt  IGM_Trajectory  T3R_trajectory.txt  backup.txt  l_arm_trajectory.txt  r_arm_trajectory.txt  trajectory.txt
02_MATLAB_Code/: ReConBot.m  data.mat  main.m  pathdef.m  publisher.m  reconbotCallback.m  traj_pub.m  untitled.m
02_MATLAB_Code/Reconbot3Ddemo/: CollisionCheck_LineDisplay.m  Demo.mat  Error_Problem_Motion_1.mat  IK.asv  IK.m  IK_p_ABC_q1q2.m  Inputs_rad.txt  InsertRowTransiConfig_Test.mat  Main_RCB_input_ModeSelection.m  Main_input_ModeSelection.asv  Main_input_ModeSelection.m  Main_input_ModeSelection_4Paper.asv  Main_input_ModeSelection_4Paper.m  Main_input_ModeSelection_GUI.m  Main_input_ModeSelection_debugging.asv  Main_input_ModeSelection_debugging.m  Mode2T2Rsixbar.mat  Modes1-12.mat  Modes6-12.mat  MotionPlanningOptimalSoultion.asv  MotionPlanningOptimalSoultion.m  MotionPlanningOptimalSoultion_Debugging.m  MotionPlanningOptimalSoultion_debugging.asv  MotionPlanningOptimalSoultion_debugging.m  MotionPlanningSingleMode.asv  MotionPlanningSingleMode.m  MotionPlanningTransitionModes.m  OptimalJointsSolution.asv  OptimalJointsSolution.m  RCBLinkdata.mat  RCB_CartesianSpacePlanning.m  RCB_input_ModeSelection.m  RandomPosition2HomePosition.asv  RandomPosition2HomePosition.m  SelectNumberOfTrajectoryPoints.m  TransitionStrategy-1stVersion.m  TransitionStrategy.asv  TransitionStrategy.m  TransitionStrategy_debugging.asv  TransitionStrategy_debugging.m  (+11 more)
02_MATLAB_Code/documentation/: ReConBot.html
02_MATLAB_Code/sensors_data/: 2R_A1C1_A2C2_0509_encoders_data.txt  SensorDataPlot.asv  (+28 more)
04_PYTHON_GUI/: backup.txt  main.py  reconbot_control_gui.py
Animation/: RCBLinkdata.mat  RCB_3Ddemo_ForwardKinematics.m
CollisionCheck/: InputFile.m
Modes/: EulerAngles_beta_gamma_q11_IK.m  OOPtestfile.m  RCB2RserialA2C2.m  RCB2T2Rthreebar.m  RCB3T1R.m
cad2matR2/: CollisionLines.m  CollisionPointsFK.m  RCBLinkdata.mat  RCB_BaseJointA1C1.STL  RCB_BaseLow.STL  RCB_BaseUP.STL  RCB_LowLinkA1C1.STL  RCB_MP.STL  RCB_MovingPlatform.STL  RCB_UPjointA1C1.STL  cad2matCollisionCheck.m  cad2matRCB.m
dynamixel_reconbot/: CMakeLists.txt  package.xml
reconbot/: CHANGELOG.rst  CMakeLists.txt  package.xml
reconbot_control/: CMakeLists.txt
(+2130 files in other folders)
