<?xml version="1.0"?>
<package>
  <name>reconbot_control</name>
  <version>0.0.0</version>
  <description>The reconbot_control package</description>

  <author email="delacruz@igm.rwth-aaachen.de">Jorge De La Cruz</author>
  <maintainer email="delacruz@igm.rwth-aaachen.de">Jorge De La Cruz</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamixel_controllers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <buildtool_depend>catkin</buildtool_depend>

</package>
